--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   format-and-lint:
-    if: "contains(github.event.head_commit.message, 'apkRelease')"
+    if: "contains(github.event.head_commit.message, 'apkRelease@@')"
     name: Code linting
     runs-on: ubuntu-latest
     steps:
